Documented terrain updates
- Saved generation history preserves terrain across pack and generator updates
- Studio captures immutable activations and blends new terrain against saved boundaries
- Runtime initialization failures block world creation with documented recovery
- Native content and terrain queries follow recorded generation ownership
- Pregeneration verifies saved chunk completion before applying cache hints
- Overworld resource examples use canonical lowercase paths